add a CalendarCard widget,  First Version

--- a/app/src/main/res/layout/layout_header.xml
+++ b/app/src/main/res/layout/layout_header.xml
@@ -15,13 +15,18 @@
             android:layout_height="fill_parent"
             android:layout_gravity="left|center_vertical"
             android:background="@drawable/mm_title_back"
-            android:text="@string/Back"
+            android:text="@string/return_back"
             android:textColor="#fff"
             android:textSize="@dimen/title_btn_font" />
 
         <TextView
             android:id="@+id/text_title"
-            style="@style/activity_title_text" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/mm_title_btn"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textColor="#fff" />
 
         <Button
             android:id="@+id/button_right"
@@ -30,9 +35,9 @@
             android:layout_gravity="right|center_vertical"
             android:background="@drawable/mm_title_btn"
             android:gravity="center"
-            android:text="@string/Confirm"
+            android:text="@string/confirm"
             android:textColor="#fff"
-            android:textSize="@dimen/titlebtn_font"
+            android:textSize="@dimen/title_btn_font"
             android:visibility="invisible" />
 
 
